# miit

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  requirements.txt
docs/source/baseimage/: base_image.rst  section.rst
docs/source/examples/: examples.rst
docs/source/registerers/: registerers.rst
docs/source/spatialomics/: Imzml.rst  spatial_omics.rst  visium.rst
examples/data/msi_neg/: IdentifiedPeaks.csv  data.ibd  msi_annotation.srd
examples/data/msi_pos/: data.ibd  msi_annotations.srd  pos_ion_labels.txt
examples/notebooks/: 01_data_types.ipynb  02_integrate_st_and_msi.ipynb  03_integrate_msi_and_msi.ipynb  helper_functions.py  integrated_annotation.csv  integrated_msi.csv  integrated_msi_neg.ibd
examples/notebooks/temp_data/: integrate_all_data.ipynb  temp_notebook.ipynb
miit/: __version__.py  custom_types.py  experiment.py  reg_graph.py
miit/integration/: integration.py
miit/registerers/: __init__.py  affine_transforms.py  base_registerer.py  bspline_parameters.txt  greedy_f_hist_ext.py  manual_affine_registerer.py  nifity_reg.py  nifty_reg.py  opencv_affine_registerer.py  pointset_registerer.py  pointset_registerer_old.py  registrations.py  simple_elastix_point.py  utils.py
miit/registerers/other/: __init__.py  msi_to_hist_meta_registerer.py
miit/secrect_scripts/: utils.py
miit/spatial_data/: __init__.py  image.py  loaders.py  section.py
miit/spatial_data/base_classes/: __init__.py  base_imaging.py
miit/spatial_data/base_types/: __init__.py  annotation.py  base_imaging.py  base_type_loader.py  default_image.py  geojson.py  image.py  ome_image.py  ometiff_annotation.py  ometiff_image.py  pointset.py
miit/spatial_data/molecular_imaging/: imaging_data.py  imzml.py  loader.py  maldi.py  scils_export_imzml.py  spatial_transcriptomics.py  visium10x.py
miit/spatial_data/spatial_omics/: __init__.py  imaging_data.py  imzml.py  spatial_omics_loader.py  visium.py
miit/utils/: distance_unit.py  image_utils.py  imzml.py  imzml_preprocessing.py  integration_utils.py  maldi_extraction.py  metrics.py  plot.py  qupath.py  scils.py  section_utils.py  segmentation.py  spatial_utils.py  tif_utils.py  utils.py
secrect_scripts/: utils.py
tests/: test_miit_annotation.py  test_miit_image.py  test_miit_ome_image.py  utils.py
(+20 files in other folders)
