[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
name = "miit"
version = "0.0.2-rc2"
description = "Integration of spatially resolved multi-omics data."
authors = ["Maximilian Wess <maximilian.wess@ntnu.no>"]

[tool.poetry.dependencies]

geojson = "^3.1.0"
matplotlib = "^3.8.2"
shapely = "^2.0.2"
lxml = "^5.2.2"
imagecodecs = "^2024.6.1"
imageio = "^2.31.5"
numpy = "^1.24.4"
opencv-python = "^4.8.1.78"
pandas = "^2.0.3"
Pillow = "^10.1.0"
scikit-learn = "^1.4.0"
scikit-image = "^0.21.0"
scipy = "^1.10.1"
setuptools = "^68.2.2"
SimpleITK = "^2.2.1"
stack-data = "^0.6.2"
tifffile = "^2023.7.10"
tqdm = "^4.66.1"
# Remove ultralytics dependency, since we only need opencv for reading the segmentation model
onnxruntime = "1.17.0"
toml = "0.10.2"
pyimzML = "1.5.3"
greedyfhist = { git = "https://github.com/mwess/greedyfhist", tag= "v0.0.2-rc2" }
niftyreg = "1.5.70rc1"
seaborn = "0.13.2"
h5py = "3.12.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
