[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79

[tool.poetry]
version = "0.0.3-rc4"
readme = "README.md"

[project]
name = "miit"
description = "Integration of spatially resolved multi-omics data."
authors = [
    {name = "Maximilian Wess", email = "maximilian.wess@ntnu.no"},
]
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "geojson (>=3.1.0)",
    "matplotlib (>=3.8.2)",
    "shapely (>=2.0.2)",
    "lxml (>=5.2.2)",
    "imagecodecs (>=2024.6.1)",
    "imageio (>=2.31.5)",
    "numpy (>=1.24.4)",
    "opencv-python (>=4.8.1.78)",
    "pandas (>=2.0.3)",
    "Pillow (>=10.1.0)",
    "scikit-learn (>=1.4.0)",
    "scikit-image (>=0.21.0)",
    "scipy (>=1.10.1)",
    "setuptools (>=70.0.0)",
    "SimpleITK (>=2.2.1)",
    "stack-data (>=0.6.2)",
    "tifffile (>=2023.7.10)",
    "tqdm (>=4.66.1)",
    "onnxruntime (>=1.22.1)",
    "toml (>=0.10.2)",
    "pyimzML (>=1.5.3)",
    "seaborn (>=0.13.2)",
    "h5py (>=3.12.1)",
    "pydicom (>=3.0.1)",
    "greedyfhist @ git+https://github.com/mwess/greedyfhist@v0.0.3-rc6"
]

[tool.poetry.dev-dependencies]
mypy = "^0.812"
